--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SUN</title>
     <link rel="stylesheet" href="./lib/bootstrap.min.css">
-    <link rel="stylesheet" href="main.css">
+    <style>
+        .container{
+            padding-top: 20px;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        }
+    </style>
 </head>
 <body>
         <div id="carousel-ex" class="carousel slide" data-bs-ride="carousel">
