--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <style>
         .container{
             padding-top: 20px;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
         }
     </style>
 </head>
@@ -35,7 +34,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="card">
                         <img src="https://i.pinimg.com/736x/7f/12/46/7f124626a3f690740800d27dc13825f2.jpg" />
                         <div class="card-body">
@@ -47,7 +46,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="card">
                         <img src="https://th.bing.com/th/id/OIP.n1wVJqU2Begb5NvVo3_ymQAAAA?w=291&h=337&rs=1&pid=ImgDetMain" />
                         <div class="card-body">
@@ -59,7 +58,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="card">
                         <img src="https://i.pinimg.com/originals/bd/54/6c/bd546c068f63a4d7b0de1c029d940dba.jpg" />
                         <div class="card-body">
