--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <div id="carousel-ex" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div data-bs-interval="3000" class="carousel-item active">
-                    <img class="d-block w-100" src="https://i.pinimg.com/564x/38/af/78/38af78cc3a8f5f7127e056749a334131.jpg" />
+                    <img class="d-block w-100" src="https://images.pexels.com/photos/3715166/pexels-photo-3715166.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
                 </div>
                 <div data-bs-interval="3000" class="carousel-item">
-                    <img class="d-block w-100" src="https://i.pinimg.com/564x/d4/6c/93/d46c9348c617e0848a2597d47c572d86.jpg" />
+                    <img class="d-block w-100" src="https://images.pexels.com/photos/8868122/pexels-photo-8868122.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
                 </div>
                 <div data-bs-interval="3000" class="carousel-item">
-                    <img class="d-block w-100" src="https://i.pinimg.com/564x/ad/10/79/ad1079e808bfccd0075d47dd975e1957.jpg" />
+                    <img class="d-block w-100" src="https://images.pexels.com/photos/17460849/pexels-photo-17460849/free-photo-of-construcao-predio-edificio-parede.png" />
                 </div>
             </div>
             <button data-bs-target="#carousel-ex" data-bs-slide="prev" class="carousel-control-prev" type="button">
